kubernetes/applications/ceph-storage/manifests/speedtest-tracker/speedtest-tracker-deployment.yml




---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
  labels:
    app: speedtest-tracker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:1.14.8
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 443
          volumeMounts:
            - name: config
              mountPath: /config
            - name: web
              mountPath: /etc/ssl/web
          readinessProbe:
            tcpSocket:
              port: 443
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 443
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: speedtest-tracker-config
        - name: web
          persistentVolumeClaim:
            claimName: speedtest-tracker-web
