kubernetes/applications/ceph-storage/manifests/speedtest-tracker/speedtest-tracker-db-headless-service.yml




---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker-db-headless
  namespace: speedtest-tracker
  labels:
    app: speedtest-tracker-db
spec:
  clusterIP: None
  selector:
    app: speedtest-tracker-db
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
